--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="./js/index.js"></script>
   </head>
   <body>
+    <p id="loading">Loading...</p>
     <div id="window">
         <p>Welcome to fluttr.me 2.0.1 NTS (GNU/Linux 5.15.79.1-github-pages x86_64)</p>
         <br>
