Potential fix for safari non-focussing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu+Mono">
     <script type="text/javascript" src="./js/index.js"></script>
   </head>
-  <body>
+  <body onclick="doFocus()">
     <p id="loading">Loading...</p>
     <div id="window">
         <p>Welcome to fluttr.me 2.0.3 NTS (GNU/Linux 5.15.79.1-github-pages x86_64)</p>
