Fixed Discogs entry on legacy site

--- a/regular/index.html
+++ b/regular/index.html
@@ -46,7 +46,7 @@
 						</br>
 						<p class="text-center"><span class="fab fa-lastfm mr-3 item-icon"></span><a href="https://www.last.fm/user/Fluttrr"><span>Last.fm</span></a></p>
 						<p class="text-center"><span class="fab fa-buysellads mr-3 item-icon"></span><a href="https://anilist.co/user/Flutter/"><span>Anilist</span></a></p>
-						<p class="text-center"><span class="fas fa-record-vinyl mr-3 item-icon"></span><a href="https://www.discogs.com/user/Fluttr/collection?header=1"><span>Anilist</span></a></p>
+						<p class="text-center"><span class="fas fa-compact-disc mr-3 item-icon"></span><a href="https://www.discogs.com/user/Fluttr/collection?header=1"><span>Discogs</span></a></p>
 						</br>
 						<p class="text-center"><span class="fab fa-bandcamp mr-3 item-icon"></span><a href="https://fluttr.bandcamp.com/"><span>Bandcamp</span></a></p>
 						<p class="text-center"><span class="fab fa-youtube mr-3 item-icon"></span><a href="https://www.youtube.com/channel/UCrtf_NgTcCwwrMfWCb3PKHA"><span>YouTube</span></a></p>
