Make year update automatically in footer

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <p class="indent">* Maintained with <span style="color:red;">♥</span> by fluttr.</p>
         <br>
         <p>This message is shown on each visit. Feel free to explore around! </p>
-        <p><span class="accent">(C)</span> 2023, fluttr</span></p>
-        <script>commandPrompt();</script>
+        <p><span class="accent">(C)</span> <span id="currentYear">0000</span>, fluttr</p>
+        <script>setCurrentYear();commandPrompt();</script>
     </div>
   </body>
 </html>
