Update links, about me and fix inconsistent cat commands

--- a/regular/index.html
+++ b/regular/index.html
@@ -34,13 +34,26 @@
 					<div>
 						<hr class="section-hr my-5" />
 					</div>
-					<p class="text-center">I make music, I do digital illustrations, I sew and make plushies, I do photography, I create designs, I love watercolor painting and much much more!!</p>
-					<p class="text-center">You can find links to any of my profiles below, feel free to message me for any reason:</p>
+					<p class="text-center">Hey! Thanks for trusting me enough to actually go on my website lol. This is mostly a hub for all my profiles and this section you're reading right now.</p>
+					<p class="text-center">I study computer science and I'm into various things, such as:</p>
+					<ul class="text-center">
+						<li>&bull; Making music</li>
+						<li>&bull; Learning Japanese</li>
+						<li>&bull; 3D Printing</li>
+						<li>&bull; Tech/Programming</li>
+						<li>&bull; Collecting Vinyl and Manga</li>
+						<li>&bull; Good audio equipment (Headphones, IEMs, amps, speakers)</li>
+						<li>&bull; Tea</li>
+						<li>&bull; Cooking/Baking</li>
+						<li>&bull; Sewing Plushies (haven't done it in ages)</li>
+						<li>&bull; Wild Camping (also very rarely do this lol)</li>
+					</ul>
+					<br />
+					<p class="text-center">Feel free to message me anywhere for any reason!</p>
+
 					<div class="my-4">
-						<p class="text-center"><span class="fab fa-discord mr-3 item-icon"></span><span>Flutter#9523</span></p>
-						<p class="text-center"><span class="fab fa-steam mr-3 item-icon"></span><a href="https://steamcommunity.com/id/Fluttr/"><span>Steam</span></a></p>
-						<p class="text-center"><span class="fab fa-twitter mr-3 item-icon"></span><a href="https://twitter.com/fluttr_me"><span>Twitter</span></a></p>
-						</br>
+						<p class="text-center"><span class="fab fa-discord mr-3 item-icon"></span><span>@fluttr.</span></p>
+						<p class="text-center"><span class="fab fa-steam mr-3 item-icon"></span><a href="https://steamcommunity.com/id/Fluttr/"><span>Steam</span></a></p>						</br>
 						<p class="text-center"><span class="fab fa-github mr-3 item-icon"></span><a href="https://github.com/Fluttrr"><span>GitHub</span></a></p>
 						<p class="text-center"><span class="fas fa-dharmachakra mr-3 item-icon"></span><a href="https://www.codewars.com/users/Flutter"><span>Codewars</span></a></p>
 						</br>
