Changed poor wording

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p class="indent">* For a list of commands, type "help".</p>
         <p class="indent">* Maintained with <span style="color:red;">♥</span> by fluttr.</p>
         <br>
-        <p>This message is shown on each visit. Feel free to explore around! </p>
+        <p>This message is shown on each visit. Feel free to look around! </p>
         <p><span class="accent">(C)</span> <span id="currentYear">0000</span>, fluttr</p>
         <script>setCurrentYear();commandPrompt();</script>
     </div>
