Added parentheses for command instructions in welcome message

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <br>
     <p class="indent">* For a list of commands, type "help".</p>
     <p class="indent">* Maintained with <span style="color:red;">♥</span> by fluttr.</p>
-    <p class="indent">* New: type music to listen to my music!</p>
+    <p class="indent">* New: type "music" to listen to my music!</p>
     <br>
     <p>This message is shown on each visit. Feel free to look around! </p>
     <p><span class="accent">(C)</span> <span id="currentYear">0000</span>, fluttr</p>
