Update welcome message and add blog command description in index.html

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 <body onclick="doFocus()">
   <p id="loading">Loading...</p>
   <div id="window">
-    <p>Welcome to fluttr.me 2.0.3 NTS (GNU/Linux 5.15.79.1-github-pages x86_64)</p>
+    <p>Welcome to fluttr.me 2.1.0 NTS (GNU/Linux 5.15.79.1-github-pages x86_64)</p>
     <br>
     <p class="indent">* For a list of commands, type "help".</p>
     <p class="indent">* Maintained with <span style="color:red;">♥</span> by fluttr.</p>
-    <p class="indent">* New: type "music" to listen to my music!</p>
+    <p class="indent">* New: type "music" to listen to my music or "blog" to see dumb blog posts!</p>
     <br>
-    <p>This message is shown on each visit. Feel free to look around! </p>
+    <p>This message is shown on each visit. Feel free to look around!</p>
     <p><span class="accent">(C)</span> <span id="currentYear">0000</span>, fluttr</p>
     <script>setCurrentYear(); commandPrompt();</script>
 
