--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/music.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu+Mono">
+  <script type="text/javascript" src="./js/cliHelper.js"></script>
+  <script type="text/javascript" src="./js/fetchJSON.js"></script>
+  <script type="text/javascript" src="./js/commands.js"></script>
   <script type="text/javascript" src="./js/index.js"></script>
   <script type="text/javascript" src="./js/generateMusic.js"></script>
   <script type="text/javascript" src="./js/musicPlayer.js" defer></script>
